--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,8 @@
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-masonry-component": "^6.2.1",
     "react-redux": "^7.2.4",
     "react-router-dom": "^6.0.0-beta.0",
     "redux": "^4.1.0",
