--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "clsx": "^1.1.1",
+    "fitvids": "^2.1.1",
     "history": "^5.0.0",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
