--- a/server/package.json
+++ b/server/package.json
@@ -23,5 +23,15 @@
     "nodemon": "^2.0.9",
     "youtube-api": "^3.0.1",
     "youtube-search": "^1.1.6"
+  },
+  "devDependencies": {
+    "eslint": "^7.2.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-node": "^4.1.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "prettier": "^2.3.2"
   }
 }
