--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -7,6 +7,7 @@
       "no-unused-vars": "warn",
       "react/prop-types": "warn",
       "react/forbid-prop-types": "off",
+      "react/require-default-props":"warn",
       "no-console": "off",
       "func-names": "off",
       "no-process-exit": "off",
