--- a/client/package.json
+++ b/client/package.json
@@ -9,14 +9,17 @@
   "private": true,
   "proxy": "http://localhost:5000",
   "dependencies": {
+    "@date-io/date-fns": "1.x",
     "@fortawesome/fontawesome-free": "^5.15.3",
     "@material-ui/core": "^4.12.1",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/pickers": "^3.3.10",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "clsx": "^1.1.1",
+    "date-fns": "^2.22.1",
     "fitvids": "^2.1.1",
     "history": "^5.0.0",
     "jwt-decode": "^3.1.2",
