--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -16,7 +16,8 @@
       "react/jsx-uses-react": "off",
       "react/react-in-jsx-scope": "off",
       "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
-      "react/jsx-props-no-spreading": "off"
+      "react/jsx-props-no-spreading": "off",
+      "no-underscore-dangle": "off"
     },
     "env": {
       "browser": true
