--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "history": "^5.0.0",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
+    "moment-duration-format": "^2.3.2",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
