--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^6.0.0-beta.0",
+    "react-twitter-embed": "^3.0.3",
     "react-youtube": "^7.13.1",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
