--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   "proxy": "http://localhost:5000",
   "dependencies": {
     "@date-io/date-fns": "1.x",
+    "@date-io/moment": "1.x",
     "@fortawesome/fontawesome-free": "^5.15.3",
     "@material-ui/core": "^4.12.1",
     "@material-ui/icons": "^4.11.2",
