--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -17,7 +17,8 @@
       "react/react-in-jsx-scope": "off",
       "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
       "react/jsx-props-no-spreading": "off",
-      "no-underscore-dangle": "off"
+      "no-underscore-dangle": "off",
+      "jsx-a11y/media-has-caption": "off"
     },
     "env": {
       "browser": true
