--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -18,7 +18,8 @@
       "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
       "react/jsx-props-no-spreading": "off",
       "no-underscore-dangle": "off",
-      "jsx-a11y/media-has-caption": "off"
+      "jsx-a11y/media-has-caption": "off",
+      "jsx-a11y/click-events-have-key-events": "off"
     },
     "env": {
       "browser": true
