--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -1,32 +1,39 @@
 {
-    "extends": ["airbnb", "prettier"],
-    "plugins": ["prettier"],
-    "parser": "babel-eslint",
-    "rules": {
-      "prettier/prettier" : [
-        "error",
-        {
-          "endOfLine": "auto"
-        }
-      ],
-      "no-unused-vars": "warn",
-      "react/prop-types": "warn",
-      "react/forbid-prop-types": "off",
-      "react/require-default-props":"warn",
-      "no-console": "off",
-      "func-names": "off",
-      "no-process-exit": "off",
-      "object-shorthand": "off",
-      "class-methods-use-this": "off",
-      "react/jsx-uses-react": "off",
-      "react/react-in-jsx-scope": "off",
-      "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
-      "react/jsx-props-no-spreading": "off",
-      "no-underscore-dangle": "off",
-      "jsx-a11y/media-has-caption": "off",
-      "jsx-a11y/click-events-have-key-events": "off"
-    },
-    "env": {
-      "browser": true
-    }
+  "extends": ["airbnb", "prettier"],
+  "plugins": ["prettier"],
+  "parser": "babel-eslint",
+  "rules": {
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ],
+    "react/self-closing-comp": [
+      "error",
+      {
+        "component": true,
+        "html": true
+      }
+    ],
+    "no-unused-vars": "warn",
+    "react/prop-types": "warn",
+    "react/forbid-prop-types": "off",
+    "react/require-default-props": "warn",
+    "no-console": "off",
+    "func-names": "off",
+    "no-process-exit": "off",
+    "object-shorthand": "off",
+    "class-methods-use-this": "off",
+    "react/jsx-uses-react": "off",
+    "react/react-in-jsx-scope": "off",
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+    "react/jsx-props-no-spreading": "off",
+    "no-underscore-dangle": "off",
+    "jsx-a11y/media-has-caption": "off",
+    "jsx-a11y/click-events-have-key-events": "off"
+  },
+  "env": {
+    "browser": true
   }
+}
