new Discography page.

--- a/client/package.json
+++ b/client/package.json
@@ -45,6 +45,8 @@
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
+    "simplebar": "^5.3.6",
+    "simplebar-react": "^2.3.6",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
