--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^5.13.2",
     "mongoose-paginate-v2": "^1.4.1",
     "nodemon": "^2.0.9",
+    "papaparse": "^5.3.1",
     "youtube-api": "^3.0.1",
     "youtube-search": "^1.1.6"
   },
