:boom: Create tenkai_nest
create codebase for API V2 using nestJS

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,10 @@ client/build
 server/.env
 client/.env
 server/script/input
+
+
+server2
+
+tenkai_nest/node_modules
+tenkai_nest/dist
+tenkai_nest/.env
