--- a/tenkai_nest/package.json
+++ b/tenkai_nest/package.json
@@ -33,6 +33,7 @@
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "dotenv": "^10.0.0",
+    "moment": "^2.29.1",
     "mongodb": "^4.1.3",
     "mongoose": "^6.0.12",
     "passport": "^0.5.0",
@@ -41,7 +42,8 @@
     "remove": "^0.1.5",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "swagger-ui-express": "^4.1.6"
+    "swagger-ui-express": "^4.1.6",
+    "youtube-api": "^3.0.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
@@ -49,6 +51,7 @@
     "@nestjs/testing": "^8.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.1",
+    "@types/moment": "^2.13.0",
     "@types/node": "^16.0.0",
     "@types/passport-jwt": "^3.0.6",
     "@types/supertest": "^2.0.11",
