--- a/tenkai_nest/package.json
+++ b/tenkai_nest/package.json
@@ -29,10 +29,12 @@
     "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.1.4",
+    "@types/lodash": "^4.14.176",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "dotenv": "^10.0.0",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "mongodb": "^4.1.3",
     "mongoose": "^6.0.12",
@@ -76,7 +78,10 @@
       "json",
       "ts"
     ],
-    "rootDir": "src",
+    "rootDir": "./",
+    "modulePaths": [
+      "<rootDir>"
+    ],
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
