--- a/tenkai_nest/tsconfig.build.json
+++ b/tenkai_nest/tsconfig.build.json
@@ -1,4 +1,4 @@
 {
   "extends": "./tsconfig.json",
-  "exclude": ["node_modules", "test", "dist", "**/*spec.ts"]
+  "exclude": ["node_modules", "test", "dist", "**/__mocks__","**/test" ,"**/*spec.ts"]
 }
