--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,34 @@ server2
 tenkai_nest/node_modules
 tenkai_nest/dist
 tenkai_nest/.env
+
+tenkai_next/node_modules
+tenkai_next/.pnp
+.pnp.js
+
+
+tenkai_next/coverage
+
+
+tenkai_next/.next/
+tenkai_next/out/
+
+tenkai_next/build
+
+
+.DS_Store
+*.pem
+
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+
+.vercel
