--- a/tenkai_next/package.json
+++ b/tenkai_next/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint --fix"
   },
   "dependencies": {
     "next": "latest",
@@ -12,8 +13,16 @@
   },
   "devDependencies": {
     "@types/react": "^17.0.34",
+    "@typescript-eslint/eslint-plugin": "^5.3.1",
     "autoprefixer": "^10.2.6",
+    "eslint": "<8.0.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-next": "12.0.3",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.26.1",
     "postcss": "^8.3.5",
+    "prettier": "^2.4.1",
     "tailwindcss": "^2.2.4",
     "typescript": "^4.4.4"
   }
