⚗️ Experiment with how tailwind deal with string concatation

--- a/tenkai_next/package.json
+++ b/tenkai_next/package.json
@@ -4,7 +4,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint --fix"
+    "lint": "next lint --fix",
+    "build-start": "yarn build && yarn start"
   },
   "dependencies": {
     "@headlessui/react": "^1.4.2",
