--- a/tenkai_next/package.json
+++ b/tenkai_next/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.4.2",
+    "@react-hook/media-query": "^1.1.1",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
