--- a/tenkai_next/package.json
+++ b/tenkai_next/package.json
@@ -9,13 +9,11 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.4.2",
-    "@react-hook/media-query": "^1.1.1",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.1.1",
-    "react-icons": "^4.3.1",
-    "use-dark-mode": "^2.3.1"
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "@types/react": "^17.0.34",
