--- a/tenkai_next/package.json
+++ b/tenkai_next/package.json
@@ -13,7 +13,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.1.1",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "zustand": "^3.6.5"
   },
   "devDependencies": {
     "@types/react": "^17.0.34",
