--- a/tenkai_next/package.json
+++ b/tenkai_next/package.json
@@ -9,11 +9,14 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.4.2",
+    "@tailwindcss/line-clamp": "^0.2.2",
+    "moment": "^2.29.1",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.1.1",
     "react-icons": "^4.3.1",
+    "uuid": "^8.3.2",
     "zustand": "^3.6.5"
   },
   "devDependencies": {
