--- a/tenkai_next/package.json
+++ b/tenkai_next/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.4.2",
+    "@popperjs/core": "^2.10.2",
     "@tailwindcss/line-clamp": "^0.2.2",
     "moment": "^2.29.1",
     "next": "latest",
@@ -16,6 +17,7 @@
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.1.1",
     "react-icons": "^4.3.1",
+    "react-popper": "^2.2.5",
     "uuid": "^8.3.2",
     "zustand": "^3.6.5"
   },
