--- a/tenkai_next/package.json
+++ b/tenkai_next/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.1.1",
     "react-icons": "^4.3.1",
+    "react-player": "^2.9.0",
     "react-popper": "^2.2.5",
     "uuid": "^8.3.2",
     "zustand": "^3.6.5"
