--- a/tenkai_next/package.json
+++ b/tenkai_next/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^4.3.1",
     "react-player": "^2.9.0",
     "react-popper": "^2.2.5",
+    "react-twitter-embed": "^3.0.3",
     "uuid": "^8.3.2",
     "zustand": "^3.6.5"
   },
