--- a/tenkai_next/package.json
+++ b/tenkai_next/package.json
@@ -12,6 +12,7 @@
     "@popperjs/core": "^2.10.2",
     "@tailwindcss/aspect-ratio": "^0.3.0",
     "@tailwindcss/line-clamp": "^0.2.2",
+    "axios": "^0.24.0",
     "framer-motion": "^5.3.0",
     "moment": "^2.29.1",
     "next": "latest",
