--- a/tenkai_next/package.json
+++ b/tenkai_next/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.1.1",
     "react-icons": "^4.3.1",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-player": "^2.9.0",
     "react-popper": "^2.2.5",
     "react-twitter-embed": "^3.0.3",
